welcome.lessons.welcome.loopdowhile.Poucet.scala.error
Poucet:8: error: not found: value nbBiscuit
	nbBiscuit = nbBiscuit + 1 ;
        ^Poucet:11: error: not found: value nbBiscuit
}while(nbBiscuit < 2) 
       ^